# python-project-50

./: Makefile  README.md  pyproject.toml
gendiff/scripts/: gendiff.py
