[project]
name = "hexlet-code"
version = "0.1.0"
description = "Sometext ..."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
authors = [
    {name = "Sergey Krash.", email = "badj.xy@gmail.com"},
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"
